--- a/index.html
+++ b/index.html
@@ -6,10 +6,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auuuugh</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
+    <link rel="icon" href="auuuugh.jpg" />
 </head>
 
 <body>
+    <div class="app">
+        <header>
+            <a href="index.html">
+                <h1>Auuuugh</h1>
+            </a>
+            <p>Click any tile to Auuuugh</p>
+        </header>
 
+        <div class="visual">
+            <div class="keyboard">
+                <div class="key1">
+                    <p>Tile 1</p>
+                    <audio src="./sounds/1 normal auuuugh.mp3"></audio>
+                </div>
+                <div class="key2">
+                    <p>Tile 2</p>
+                    <audio src="./sounds/2 high pitched auuugh.mp3"></audio>
+                </div>
+                <div class="key3">
+                    <p>Tile 3</p>
+                    <audio src="./sounds/3 low pitched auuuugh.mp3"></audio>
+                </div>
+                <div class="key4">
+                    <p>Tile 4</p>
+                    <audio src="./sounds/4 fast auuugh.mp3"></audio>
+                </div>
+                <div class="key5">
+                    <p>Tile 5</p>
+                    <audio src="./sounds/5 slow auuuugh.mp3"></audio>
+                </div>
+                <div class="key6">
+                    <p>Tile 6</p>
+                    <audio src="./sounds/6 echo auuuugh.mp3"></audio>
+                </div>
+                <div class="key7">
+                    <p>Tile 7</p>
+                    <audio src="./sounds/7 spin auuugh.mp3"></audio>
+                </div>
+                <div class="key8">
+                    <p>Tile 8</p>
+                    <audio src="./sounds/8 loud auuuugh.mp3"></audio>
+                </div>
+                <div class="key9">
+                    <p>Tile 9</p>
+                    <audio src="./sounds/9 reverse auuuugh.mp3"></audio>
+                </div>
+                <div class="key10">
+                    <p>Tile 10</p>
+                    <audio src="./sounds/10 angel auuuugh.mp3"></audio>
+                </div>
+                <div class="key11">
+                    <p>Tile 11</p>
+                    <audio src="./sounds/11 demon auuuugh.mp3"></audio>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
