--- a/index.html
+++ b/index.html
@@ -21,54 +21,54 @@
             <p>Click any tile to Auuuugh</p>
         </header>
 
-        <div class="visual">
-            <div class="keyboard">
-                <div class="key1">
-                    <p>Tile 1</p>
-                    <audio class="sound" src="./sounds/1 normal auuuugh.mp3"></audio>
-                </div>
-                <div class="key2">
-                    <p>Tile 2</p>
-                    <audio class="sound" src="./sounds/2 high pitched auuugh.mp3"></audio>
-                </div>
-                <div class="key3">
-                    <p>Tile 3</p>
-                    <audio class="sound" src="./sounds/3 low pitched auuuugh.mp3"></audio>
-                </div>
-                <div class="key4">
-                    <p>Tile 4</p>
-                    <audio class="sound" src="./sounds/4 fast auuugh.mp3"></audio>
-                </div>
-                <div class="key5">
-                    <p>Tile 5</p>
-                    <audio class="sound" src="./sounds/5 slow auuuugh.mp3"></audio>
-                </div>
-                <div class="key6">
-                    <p>Tile 6</p>
-                    <audio class="sound" src="./sounds/6 echo auuuugh.mp3"></audio>
-                </div>
-                <div class="key7">
-                    <p>Tile 7</p>
-                    <audio class="sound" src="./sounds/7 spin auuugh.mp3"></audio>
-                </div>
-                <div class="key8">
-                    <p>Tile 8</p>
-                    <audio class="sound" src="./sounds/8 loud auuuugh.mp3"></audio>
-                </div>
-                <div class="key9">
-                    <p>Tile 9</p>
-                    <audio class="sound" src="./sounds/9 reverse auuuugh.mp3"></audio>
-                </div>
-                <div class="key10">
-                    <p>Tile 10</p>
-                    <audio class="sound" src="./sounds/10 angel auuuugh.mp3"></audio>
-                </div>
-                <div class="key11">
-                    <p>Tile 11</p>
-                    <audio class="sound" src="./sounds/11 demon auuuugh.mp3"></audio>
-                </div>
+        <div class="visual"></div>
+        <div class="keyboard">
+            <div class="key1">
+                <p>Tile 1</p>
+                <audio class="sound" src="./sounds/1 normal auuuugh.mp3"></audio>
+            </div>
+            <div class="key2">
+                <p>Tile 2</p>
+                <audio class="sound" src="./sounds/2 high pitched auuugh.mp3"></audio>
+            </div>
+            <div class="key3">
+                <p>Tile 3</p>
+                <audio class="sound" src="./sounds/3 low pitched auuuugh.mp3"></audio>
+            </div>
+            <div class="key4">
+                <p>Tile 4</p>
+                <audio class="sound" src="./sounds/4 fast auuugh.mp3"></audio>
+            </div>
+            <div class="key5">
+                <p>Tile 5</p>
+                <audio class="sound" src="./sounds/5 slow auuuugh.mp3"></audio>
+            </div>
+            <div class="key6">
+                <p>Tile 6</p>
+                <audio class="sound" src="./sounds/6 echo auuuugh.mp3"></audio>
+            </div>
+            <div class="key7">
+                <p>Tile 7</p>
+                <audio class="sound" src="./sounds/7 spin auuugh.mp3"></audio>
+            </div>
+            <div class="key8">
+                <p>Tile 8</p>
+                <audio class="sound" src="./sounds/8 loud auuuugh.mp3"></audio>
+            </div>
+            <div class="key9">
+                <p>Tile 9</p>
+                <audio class="sound" src="./sounds/9 reverse auuuugh.mp3"></audio>
+            </div>
+            <div class="key10">
+                <p>Tile 10</p>
+                <audio class="sound" src="./sounds/10 angel auuuugh.mp3"></audio>
+            </div>
+            <div class="key11">
+                <p>Tile 11</p>
+                <audio class="sound" src="./sounds/11 demon auuuugh.mp3"></audio>
             </div>
         </div>
+
 
     </div>
 </body>
