--- a/index.html
+++ b/index.html
@@ -24,28 +24,35 @@
         <div class="visual"></div>
         <div class="keyboard">
             <div class="key1">
-
+                <p>normal</p>
                 <audio class="sound" src="./sounds/1 normal auuuugh.mp3"></audio>
             </div>
             <div class="key2">
+                <p>high pitched</p>
                 <audio class="sound" src="./sounds/2 high pitched auuugh.mp3"></audio>
             </div>
             <div class="key3">
+                <p>low pitched</p>
                 <audio class="sound" src="./sounds/3 low pitched auuuugh.mp3"></audio>
             </div>
             <div class="key4">
+                <p>fast</p>
                 <audio class="sound" src="./sounds/4 fast auuugh.mp3"></audio>
             </div>
             <div class="key5">
+                <p>slow</p>
                 <audio class="sound" src="./sounds/5 slow auuuugh.mp3"></audio>
             </div>
             <div class="key6">
+                <p>echo</p>
                 <audio class="sound" src="./sounds/6 echo auuuugh.mp3"></audio>
             </div>
             <div class="key7">
+                <p>deep fried</p>
                 <audio class="sound" src="./sounds/7 spin auuugh.mp3"></audio>
             </div>
             <div class="key8">
+                <p>loud</p>
                 <audio class="sound" src="./sounds/8 loud auuuugh.mp3"></audio>
             </div>
             <div class="key9">
@@ -53,9 +60,11 @@
                 <audio class="sound" src="./sounds/9 reverse auuuugh.mp3"></audio>
             </div>
             <div class="key10">
+                <p>blessed</p>
                 <audio class="sound" src="./sounds/10 angel auuuugh.mp3"></audio>
             </div>
             <div class="key11">
+                <p>cursed</p>
                 <audio class="sound" src="./sounds/11 demon auuuugh.mp3"></audio>
             </div>
         </div>
